fixed login/signup too small bug in greetingis container

--- a/app/assets/stylesheets/api/greeting.scss
+++ b/app/assets/stylesheets/api/greeting.scss
@@ -12,6 +12,12 @@
     font-size: 12px;
 }
 
+.link_box{
+  height: 64.5px;
+  display: flex;
+  align-items: center;
+}
+
 .sign_up_button:hover{
   cursor: pointer;
 }
